[tool.poetry]
name = "mat-model"
version = "0.1.0"
description = "MAT Model for Long-Short Range Time Series Forecasting"
authors = ["David Wynter <stpdave@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"

# PyTorch version
torch = "^2.0.0"

# Optional GPU version (choose based on your CUDA setup)
# torch = { version = "^2.0.0", extras = ["cuda", "cpu"] }

# Other libraries used in the project
numpy = "^1.22"
pandas = "^1.4"
scipy = "^1.9"

[tool.poetry.dev-dependencies]
# Linting, formatting, testing
black = "^23.0"
flake8 = "^6.0.0"
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Define a CLI entry point for running the MAT model
run-mat = "src.mat:MATModel"
